# atomicbench

./: CMakeLists.txt  README.md  atomickernel.cu  main.cu  reducekernel.cu  util.cuh
